# nexus

./: .gitignore  README.md  finsight_history.sqlite  finsight_v2_enhanced_revised.ipynb  note  pyproject.toml  requirements.txt  test_engine.py
finsight/: __init__.py  config.py
finsight/data/: __init__.py  cache.py  macro.py  market.py  news.py  sec.py
finsight/engine/: __init__.py  cost.py  models.py  persistence.py  pipeline.py  portfolio.py  scoring.py  validation.py
finsight/llm/: __init__.py  client.py
finsight/reports/: __init__.py  formatter.py  pdf_export.py
finsight_app/: __init__.py  main.py
finsight_app/static/: app.js  index.html  styles.css
tests/: test_chroma.py  test_pipeline.py  test_scoring.py  test_sec.py  test_validation.py
tests/shims/: readline.py
