[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finsight-core"
version = "0.1.0"
description = "Core FinSight risk analysis engine"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic>=2",
  "uvicorn[standard]>=0.30",
  "yfinance>=0.2.40",
  "langchain-groq>=0.1.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.setuptools.packages.find]
include = ["finsight*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.vercel]
entrypoint = "finsight_app.main:app"
